# bioprocess_gp

./: LICENSE  README.md  demo.py  pyproject.toml  shell.nix
bioprocess_gp/: __init__.py  api.py  core.py  data.py  model.py
