[project]
name = "bioprocess_gp"
version = "0.1.0"
description = "GPyTorch-based tool for modeling cell culture bioprocess"
authors = [
    {name = "Tom Dimiduk", email = "tom@dimiduk.net"},
]
dependencies = [
    "torch",
    "gpytorch",
    "pandas",
    "numpy",
    "scipy",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
